--- a/.github/auto_assign.yml
+++ b/.github/auto_assign.yml
@@ -6,8 +6,8 @@ addAssignees: false
 
 # A list of reviewers to be added to pull requests (GitHub user name)
 reviewers:
-  - "${{ secrets.PRIMARY_QA }}"
-  - "${{ secrets.SECONDARY_QA }}"
+  - ${{ secrets.PRIMARY_QA }}
+  - ${{ secrets.SECONDARY_QA }}
 
 # A number of reviewers added to the pull request
 # Set 0 to add all the reviewers (default: 0)
