--- a/.github/auto_assign.yml
+++ b/.github/auto_assign.yml
@@ -6,7 +6,7 @@ addAssignees: false
 
 # A list of reviewers to be added to pull requests (GitHub user name)
 reviewers:
-  - gatoon
+  - gatoona
   - washco-or
   - jlwcor
 
